definição dos eventos

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,12 +1,14 @@
-﻿<Window x:Class="IN0996_UNICAMP.MainWindow"
+﻿<Window x:Class="IN0996_UNICAMP.MediaPlayer"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:IN0996_UNICAMP"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-
-    </Grid>
+        Title="Media Player" Height="600" Width="1000"
+>
+    <Window.CommandBindings>
+        <CommandBinding Command="Open" CanExecute="Open_CanExecute" Executed="Open_Executed" />
+        <CommandBinding Command="Play" CanExecute="Play_CanExecute" Executed="Play_Executed" />
+        <CommandBinding Command="Pause" CanExecute="Pause_CanExecute" Executed="Pause_Executed" />
+        <CommandBinding Command="Next" CanExecute="Next_CanExecute" Executed="Next_Executed" />
+        <CommandBinding Command="Previous" CanExecute="Previous_CanExecute" Executed="Previous_Executed" />
+        <CommandBinding Command="Repeat" CanExecute="Repeat_CanExecute" Executed="Repeat_Executed" />
+    </Window.CommandBindings>  
 </Window>
