--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,14 +1,59 @@
 ﻿<Window x:Class="IN0996_UNICAMP.MediaPlayer"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Media Player" Height="600" Width="1000"
->
+        Title="Media Player" Height="600" Width="1000">
+
     <Window.CommandBindings>
         <CommandBinding Command="Open" CanExecute="Open_CanExecute" Executed="Open_Executed" />
         <CommandBinding Command="Play" CanExecute="Play_CanExecute" Executed="Play_Executed" />
         <CommandBinding Command="Pause" CanExecute="Pause_CanExecute" Executed="Pause_Executed" />
-        <CommandBinding Command="Next" CanExecute="Next_CanExecute" Executed="Next_Executed" />
-        <CommandBinding Command="Previous" CanExecute="Previous_CanExecute" Executed="Previous_Executed" />
-        <CommandBinding Command="Repeat" CanExecute="Repeat_CanExecute" Executed="Repeat_Executed" />
-    </Window.CommandBindings>  
+    </Window.CommandBindings>
+
+    <Grid MouseWheel="Grid_MouseWheel">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="20" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="40" />
+        </Grid.RowDefinitions>
+        
+        <ToolBar Background="Gray">
+            <Button Command="Open">
+                <Image Source="/IN0996_UNICAMP;component/path/to/image.png"/>
+            </Button>
+            <Separator />
+            <Button Command="Play">
+                <Image Source="/IN0996_UNICAMP;component/path/to/image.png" />
+            </Button>
+            <Button Command="Pause">
+                <Image Source="/IN0996_UNICAMP;component/path/to/image.png" />
+            </Button>
+        </ToolBar>
+
+        <Border Grid.Row="1" Background="Black">
+            <MediaElement Name="Player" Grid.Row="1" LoadedBehavior="Manual" Stretch="Fill" Margin="0, 0, 0, 0" Width="483" Height="300" />
+        </Border>
+
+        <StatusBar Grid.Row="2" Background="Gray">
+            <StatusBar.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="Auto" />
+                        </Grid.ColumnDefinitions>
+                    </Grid>
+                </ItemsPanelTemplate>
+            </StatusBar.ItemsPanel>
+            <StatusBarItem>
+                <TextBlock Name="ProgressStatus">00:00:00</TextBlock>
+            </StatusBarItem>
+            <StatusBarItem Grid.Column="1" HorizontalContentAlignment="Stretch">
+                <Slider Name="slideProgress" Thumb.DragStarted="slideProgress_DragStarted"  Thumb.DragCompleted="slideProgress_DragCompleted" ValueChanged="slideProgress_ValueChanged" />
+            </StatusBarItem>
+            <StatusBarItem Grid.Column="2">
+                <ProgressBar Name="VolumeBar" Width="100" Height="24" Maximum="1" Value="{Binding ElementName=Player, Path=Volume}" />
+            </StatusBarItem>
+        </StatusBar>
+    </Grid>
 </Window>
