--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -93,8 +93,9 @@
                         <Border Name="PlaylistBorder" Background="Black" Height="40" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" MouseLeftButtonUp="PlaylistBorder_MouseLeftButtonUp">
                             <Border.ContextMenu>
                                 <ContextMenu>
-                                    <MenuItem Header="Excluir" Click="DeletePlaylistMenuItem_Click" />
+                                    <MenuItem Header="Adicionar à fila" Click="AddToQueue" />
                                     <MenuItem Header="Adicionar Imagem" Click="SelectImageMenuItem_Click" />
+                                    <MenuItem Header="Excluir" Click="DeletePlaylistMenuItem_Click" />
                                 </ContextMenu>
                             </Border.ContextMenu>
                             
