--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -39,13 +39,13 @@
                     <Image VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Height="25" Width="25" Source="pack://application:,,,/library/back_icon_64px.png" />
                 </Button>
                 <Button Command="Pause">
-                    <Image VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Height="25" Width="25" Source="pack://application:,,,/library\pause_icon_64px.png" />
+                    <Image VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Height="25" Width="25" Source="pack://application:,,,/library/pause_icon_64px.png" />
                 </Button>
                 <Button Command="Play">
-                    <Image VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Height="25" Width="25" Source="pack://application:,,,/library\play_icon_64px.png" />
+                    <Image VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Height="25" Width="25" Source="pack://application:,,,/library/play_icon_64px.png" />
                 </Button>
                 <Button Click="Next_Media">
-                    <Image VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Height="25" Width="25" Source="pack://application:,,,/library\next_icon_64px.png" />
+                    <Image VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Height="25" Width="25" Source="pack://application:,,,/library/next_icon_64px.png" />
                 </Button>
             </StackPanel>
 
@@ -112,7 +112,7 @@
                                     <ColumnDefinition Width="260" />
                                 </Grid.ColumnDefinitions>
                                 <Border Background="Red" Width="40"/>
-                                <Image Grid.Column="0" Source="{Binding Test}" Width="40" Height="40" />
+                                <Image Grid.Column="0" Source="{Binding imagePath}" Width="40" Height="40" />
                                 <TextBlock Grid.Column="1" Text="{Binding Name}" Foreground="White" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                             </Grid>
                         </Border>
